chore: remove livechat icons from iframe and fix paddings and text alignments

--- a/src/components/custom/_ctrader-wrapper.module.scss
+++ b/src/components/custom/_ctrader-wrapper.module.scss
@@ -3,9 +3,9 @@
 .nav_style {
     block-size: 80px;
     margin-inline: auto;
-    margin-block-end: 5rem;
 }
 
 .content_style {
     max-inline-size: 600px;
+    min-block-size: 500px;
 }
